--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
     "http-server": "0.11.1",
     "lodash": "4.17.5",
     "moment": "2.20.1",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
+    "react": "16.7.0-alpha.0",
+    "react-dom": "16.7.0-alpha.0",
     "react-intl": "2.4.0",
     "react-loadable": "5.3.1",
-    "react-redux": "5.0.6",
+    "react-redux": "6.0.0-beta.2",
     "react-router": "4.2.0",
     "react-router-dom": "4.2.2",
     "redux": "3.7.2",
